# cmake-demo-project

./: .gitmodules  CMakeLists.txt  README.md  cmake-demo-project_de_CH.ts  main.cpp  mainwindow.cpp  mainwindow.ui
.github/workflows/: ci.yml
cmake/: Findcmark.cmake
cmake/modules/: FindCmark.cmake
